flex wrap issue fixed beta

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -7,6 +7,7 @@ html{
     font-size: 62.5%;
     font-family: "Croissant One", serif;
     font-weight: lighter;
+    flex-wrap: wrap;
 }
 
 /* utility classes */
